--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css');
 :root {
-    --primary-color: rgba(88,121,224,1);
+    --primary-color: #0d6efd;
     --secondary-color: lightgray;
     --black-color:rgba(18, 18, 18, 1);
     --box-shadow-dark: 0 5px 10px rgba(0, 0, 0, 0.3);
